--- a/public/404.html
+++ b/public/404.html
@@ -7,20 +7,18 @@
     div.dialog {
       width: 25em;
       padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
+      margin: 2em auto 6em auto;
       border-right-color: #999;
       border-bottom-color: #999;
     }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+    h1 { font-size: 100%; color: #b00; line-height: 1.5em; }
   </style>
 </head>
 
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>Oops!  We couldn't find that page.</h1>
   </div>
 </body>
 </html>
